--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,3 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Go
 
 on:
@@ -10,19 +7,55 @@ on:
     branches: [ "main" ]
 
 jobs:
+  postgres:
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_DB: snipr
+          POSTGRES_PASSWORD: test
+          POSTGRES_PORT: 5432
+          POSTGRES_USER: test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    steps:  # Add this section with empty steps for now
+      - name: Wait for Postgres to start
+        run: |
+          while ! pg_isready -h localhost -p 5432 >/dev/null 2>&1; do
+            sleep 1;
+          done;
+          echo "Postgres is up and running!"
+
+  redis:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install redis
+        run: sudo apt-get install -y redis-tools redis-server
+      - name: Verify that redis is up
+        run: redis-cli ping
 
   build:
     runs-on: ubuntu-latest
+    needs: [postgres, redis]  # This line specifies dependencies
     steps:
     - uses: actions/checkout@v4
 
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.20'
+        go-version: '1.22'
 
     - name: Build
-      run: go build -v ./...
+      run: 
+        go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: 
+        go test -v ./...
