--- a/config/config_test.yml
+++ b/config/config_test.yml
@@ -1,11 +1,11 @@
 redis:
-  host: localhost
+  host: redis
   port: 6379
   db: 0
   timeout: 5
 
 postgres:
-  host: localhost
+  host: postgres
   port: 5432
   db: snipr
   user: test
