--- a/config/config_test.yml
+++ b/config/config_test.yml
@@ -1,11 +1,11 @@
 redis:
-  host: redis
+  host: 127.0.0.1
   port: 6379
   db: 0
   timeout: 5
 
 postgres:
-  host: postgres
+  host: 127.0.0.1
   port: 5432
   db: snipr
   user: test
