--- a/internal/config/test/config_test.yml
+++ b/internal/config/test/config_test.yml
@@ -1,3 +1,12 @@
+name: snipr
+host: localhost
+port: 8080
+
+shortener:
+  minLength: 4
+  customMinLength: 7
+  customMaxLength: 16
+
 redis:
   host: localhost
   port: 6379
