--- a/config/config.yml
+++ b/config/config.yml
@@ -8,13 +8,13 @@ shortener:
   customMaxLength: 16
 
 redis:
-  host: 127.0.0.1
+  host: redis
   port: 6379
   db: 0
   timeout: 5
 
 postgres:
-  host: 127.0.0.1
+  host: postgres
   port: 5432
   db: snipr
   user: test
